cluster/apps/networking/adguard/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app adguard
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 10.20.30.1
  ports:
    - name: http
      port: &port 3010
      protocol: TCP
      targetPort: *port
