cluster/apps/networking/adguard/adguard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
spec:
  ingressClassName: nginx-private
  rules:
    - host: adguard.${SECRET_PRIVATE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3010
